fix: overflow bug

--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -1,5 +1,6 @@
 @media screen and (max-width: 600px) {
     header {
+        padding: 2% !important;
         figure {
             width: 20% !important;
         }
