--- a/styles/_sidenav.scss
+++ b/styles/_sidenav.scss
@@ -9,14 +9,14 @@
 }
 
 .sidenav {
-    height: 100vh; 
+    height: 100%; 
     width: 0;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
     background-color: $dark-blue; 
-    overflow-x: hidden;
+    overflow: hidden;
     padding-top: 60px;
     transition: 400ms;
     transition-property: width;
